structmeta-tests/tests/compile_fail/struct_meta/option_bool.stderr
error[E0277]: the trait bound `bool: Parse` is not satisfied
 --> $DIR/option_bool.rs:3:5
  |
3 |     flag: Option<bool>,
  |     ^^^^ the trait `Parse` is not implemented for `bool`
